[gd_scene load_steps=7 format=2]

[ext_resource path="res://character/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://backgrounds/LivingRoom.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/living_module.gd" type="Script" id=4]
[ext_resource path="res://scenes/living_to_victory.gd" type="Script" id=5]
[ext_resource path="res://utils/Helper.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=2]
radius = 35.0
height = 116.0

[node name="LivingRoom" type="Node2D"]
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 58, 445 )
scale = Vector2( 3.2, 3.2 )

[node name="HandBody" parent="." instance=ExtResource( 6 )]
position = Vector2( 904, 322 )
rotation = 1.5708
move_x = true

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="NextArea" type="Area2D" parent="."]
position = Vector2( 57, 13 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextArea"]
position = Vector2( 992, 464 )
shape = SubResource( 2 )

[connection signal="area_entered" from="NextArea" to="NextArea" method="_on_NextArea_area_entered"]
